<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="-16dp">

        <Button
            android:id="@+id/buttonHowTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/howToTitle" />

        <Button
            android:id="@+id/buttonNewGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/buttonLoadGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_game" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>