<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EquipmentChoiceActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="247dp">

        <TextView
            android:id="@+id/textWeapons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:text="@string/playerWeapons" />

        <ListView
            android:id="@+id/listWeapons"
            android:layout_width="match_parent"
            android:layout_height="273dp" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13pt"
            android:text="" />

        <TextView
            android:id="@+id/textDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/buttonToggleWeapon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equipWeapon" />

        <TextView
            android:id="@+id/textEquippedWeapons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:text="@string/equippedWeapons" />

        <ListView
            android:id="@+id/listEquippedWeapons"
            android:layout_width="match_parent"
            android:layout_height="205dp" />

    </LinearLayout>

    <Button
        android:id="@id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>