<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LevelUpActivity">

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="213dp">

        <TextView
            android:id="@+id/textLevelUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:text="@string/levelUp" />

        <TextView
            android:id="@+id/textGainHP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textCardChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11pt"
            android:text="@string/cardChoice" />

        <GridView
            android:id="@+id/gridCardChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="4"/>

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="9pt"
            android:text="" />

        <TextView
            android:id="@+id/textDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textAttributesBonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:text="" />

        <ListView
            android:id="@+id/listAttributesBonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout10" />

</androidx.constraintlayout.widget.ConstraintLayout>