<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EncounterChoiceActivity">

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textEncounters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:text="@string/encountersChoice" />

        <Button
            android:id="@+id/buttonMonster1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/buttonMonster2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/buttonMonster3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textMonsterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13pt"
            android:text="" />

        <TextView
            android:id="@+id/textMonsterDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textMonsterSpells"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:text="" />

        <ListView
            android:id="@+id/listMonsterSpells"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textSpellName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11pt"
            android:text="" />

        <TextView
            android:id="@+id/textSpellDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonCharacterSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/characterSheet"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/buttonChooseEncounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseEncounter"
        app:layout_constraintBottom_toTopOf="@+id/buttonCharacterSheet" />

</androidx.constraintlayout.widget.ConstraintLayout>